--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-# Object file
-*.o
+# Compiled class file
+*.class
 
-# Ada Library Information
-*.ali
-git remote add origin https://github.com/Djum542/CTDL_GT.git
- git branch -M main 
-git push -u origin main
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
