--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src",
+        "tuan7"
+    ],
     "java.project.outputPath": "bin",
     "java.dependency.packagePresentation": "flat"
 }
