--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "tuan7",
         "src",
-        "tuan7"
+        "tuan8"
     ],
     "java.project.outputPath": "bin",
     "java.dependency.packagePresentation": "flat"
